...
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/nearByMockScreen"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="mockMessage"
        android:text="@string/mock"
        android:textColor="#0D47A1"
...
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/DemomockUserInput"
        android:layout_width="205dp"
        android:layout_height="258dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="162dp"
        android:ems="10"
        android:gravity="bottom|start"
...
